--- a/Pages/AppDetailOptions.cshtml
+++ b/Pages/AppDetailOptions.cshtml
@@ -4,10 +4,18 @@
 }
 
 <div class="container">
-    <div class="row mb-5 g-5" class="text-center">
-        <h1 class="text-center">Appointment for @Model.patient.FIRSTNAME @Model.patient.LASTNAME, DOB: @Model.patient.DOB.ToString("dd/MM/yyyy")</h1>
+    <div class="row" class="text-center">
+        <h1 class="text-center">Appointment for @Model.patient.FIRSTNAME @Model.patient.LASTNAME, DOB: @Model.patient.DOB.ToString("dd/MM/yyyy") (@Model.patient.CGU_No)</h1>
     </div>
-        
+    @if(Model.patientsList.Count > 0)
+    {
+        @foreach (var p in Model.patientsList)
+        {
+            <h1 class="text-center">@p.FIRSTNAME @p.LASTNAME, DOB: @p.DOB.ToString("dd/MM/yyyy") (@p.CGU_No)</h1>
+        }
+    }
+    <br />
+    <br />
     <div class="row mb-5 g-5">
         <h2 class="text-center">To see @Model.appointment.Clinician at @Model.clinicVenue.NAME (@Model.clinicVenue.FACILITY)</h2>
         <h2 class="text-center">On the @Model.appointment.BOOKED_DATE.Value.ToString("dd/MM/yyyy") at @Model.appointment.BOOKED_TIME.Value.ToString("HH:mm")</h2>
