--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -361,8 +361,7 @@
         var durationArray = [];
         var clinicArray = [];
         var clinicianArray = [];
-        var statusArray = [];
-        var pednumArray = [];
+        var statusArray = [];        
         var slotIDArray = [];
         var apptDateArray = [];
         var apptTimeArray = [];
@@ -372,8 +371,9 @@
         var apptClinicianArray = [];
         var apptOutcomeArray = [];
         var apptRefIDArray = [];
-        var CGUNoArray = [];       
+        var pedNoArray = [];       
         var ClinicLetterDateArray = [];
+        var pedNameArray = [];
         
         const today = new Date();
         //const rightnow = today.getHours() + ":" + today.getMinutes();
@@ -391,7 +391,7 @@
                 @:clinicArray.push("@item.Facility");
                 @:clinicianArray.push("@item.Clinician");   
                 @:statusArray.push("@item.SlotStatus");
-                @:pednumArray.push("@item.PedNum");
+                //@:pednumArray.push("@item.PedNum");
                 @:slotIDArray.push("@item.SlotID");
                 //we need to create the arrays like this because we can't access the data otherwise
             }
@@ -406,10 +406,11 @@
                 @:apptDurationArray.push("@item.Duration");
                 @:apptClinicArray.push("@item.Clinic");
                 @:apptClinicianArray.push("@item.Clinician");
-                @:CGUNoArray.push("@item.CGU_No");
+                @:pedNoArray.push("@item.FamilyNumber");
                 @:apptOutcomeArray.push("@item.Attendance");
                 @:apptRefIDArray.push("@item.RefID");   
                 @:ClinicLetterDateArray.push("@item.LetterPrintedDate");
+                @:pedNameArray.push("@item.FamilyName");
             }
         }
 
@@ -519,7 +520,7 @@
                                                     apptClinicianArray[k] + "</br> " +
                                                     apptClinicArray[k] + "</br>" +
                                                     apptOutcomeArray[k] + "</br>" +
-                                                    "Family: " + CGUNoArray[k].slice(0, CGUNoArray[k].indexOf('.')) + "</br><span hidden='true'>R:" +
+                                                    "Family: " + pedNoArray[k] + " (" + pedNameArray[k] + ")</br><span hidden='true'>R:" +
                                                     apptRefIDArray[k].toString() + "</span>";
                                                 }
                                                 else //current/future appointments
@@ -530,7 +531,7 @@
                                                     apptClinicianArray[k] + "</br> " + 
                                                     apptClinicArray[k] + "</br>" + 
                                                     ClinicLetterDateArray[k] + "</br>" +
-                                                    "Family: " + CGUNoArray[k].slice(0, CGUNoArray[k].indexOf('.')) + "</br><span hidden='true'>R:" +
+                                                    "Family: " + pedNoArray[k] + " (" + pedNameArray[k] + ")</br><span hidden='true'>R:" +
                                                     apptRefIDArray[k].toString() + "</span>";
                                                 }
                                                 document.getElementById(col.id).innerHTML = strApptDetail;                                                
