--- a/Pages/AppDetailOptions.cshtml
+++ b/Pages/AppDetailOptions.cshtml
@@ -4,104 +4,103 @@
 }
 
 <div class="container">
-    @if(Model.patient.MPI != 67066)
-    {
-    <div class="row" class="text-center">
-        <h1 class="text-center">Appointment for @Model.patient.FIRSTNAME @Model.patient.LASTNAME, DOB: @Model.patient.DOB.ToString("dd/MM/yyyy") (@Model.patient.CGU_No)</h1>
-    </div>
-    @if(Model.patientsList.Count > 0)
-    {
-        @foreach (var p in Model.patientsList)
+    @if(Model.patient.MPI != 67066) @*this is necessary to deal with the null problem - it has to resolve the whole website before it can redirect it.*@
+    {                               @*So I have to give it Freddie as a default patient, and not render the rest of the website in this case.*@
+        <div class="row" class="text-center">
+            <h1 class="text-center">Appointment for @Model.patient.FIRSTNAME @Model.patient.LASTNAME, DOB: @Model.patient.DOB.ToString("dd/MM/yyyy") (@Model.patient.CGU_No)</h1>
+        </div>
+        @if(Model.patientsList.Count > 0)
         {
-            <h1 class="text-center">@p.FIRSTNAME @p.LASTNAME, DOB: @p.DOB.ToString("dd/MM/yyyy") (@p.CGU_No)</h1>
+            @foreach (var p in Model.patientsList)
+            {
+                <h1 class="text-center">@p.FIRSTNAME @p.LASTNAME, DOB: @p.DOB.ToString("dd/MM/yyyy") (@p.CGU_No)</h1>
+            }
         }
-    }
-    <br />
-    <br />
-    <div class="row mb-5 g-5">
-        <h2 class="text-center">To see @Model.appointment.Clinician at @Model.clinicVenue.NAME (@Model.clinicVenue.FACILITY)</h2>
-        <h2 class="text-center">On the @Model.appointment.BOOKED_DATE.Value.ToString("dd/MM/yyyy") at @Model.appointment.BOOKED_TIME.Value.ToString("HH:mm")</h2>
-    </div>
-    <br />
-    <br />
-
-   
-    @if (Model.appointment.Clinician2 != null)
-    {
+        <br />
+        <br />
         <div class="row mb-5 g-5">
-            <div class="row mb-2">
-                <h2 class="text-center">Additional clinicians/observers:</h2>
-            </div>
-            <div class="row mb-2">
-                    <h2 class="text-center">@Model.appointment.Clinician2</h2>
-            </div>
+            <h2 class="text-center">To see @Model.appointment.Clinician at @Model.clinicVenue.NAME (@Model.clinicVenue.FACILITY)</h2>
+            <h2 class="text-center">On the @Model.appointment.BOOKED_DATE.Value.ToString("dd/MM/yyyy") at @Model.appointment.BOOKED_TIME.Value.ToString("HH:mm")</h2>
+        </div>
+        <br />
+        <br />
+   
+        @if (Model.appointment.Clinician2 != null)
+        {
+            <div class="row mb-5 g-5">
+                <div class="row mb-2">
+                    <h2 class="text-center">Additional clinicians/observers:</h2>
+                </div>
+                <div class="row mb-2">
+                        <h2 class="text-center">@Model.appointment.Clinician2</h2>
+                </div>
                 @if (Model.appointment.Clinician3 != null)
                 {
                     <div class="row mb-2">
                         <h2 class="text-center">@Model.appointment.Clinician3</h2>
                     </div>
                 }
-        </div>
-        <br />
-        <br />
-    }
-    
-
-    @if (Model.appointment.IsInterpreterReqd.GetValueOrDefault())
-    {
-        <div class="row mb-5 g-5">
-            <div class="row mb-2">
-                <h2 class="text-center">A @Model.appointment.PrimaryLanguage interpreter is required for this appointment.</h2>
             </div>
-        </div>
-        <br />
-        <br />
-    }
-    
+            <br />
+            <br />
+        }    
 
-    @if (Model.appointment.ActiveAlerts)
-    {
-        <div class="row mb-5 g-5">
-            @foreach (var a in Model.alertsList)
-            {
-                <div class="row mb-2">
-                    <h2 class="text-center redtext">Patient Alert: @a.AlertType - @a.Comments</h2>
-                </div>
-                <br />
-            }
-        </div>
-    }
-    <br />
-    <br />
-    
-    <div class="row mb-5 g-5">        
-        <div class="col-md-4 text-center">
-            <a type="button" id="btnLetters" class="btn btn-success" asp-page="ClinicLettersAndLists" asp-route-refID=@Model.refID>Print Letters/Clinic Lists</a>
-        </div>        
-        @if (Model.appointment.BOOKED_DATE > DateTime.Today || (Model.appointment.BOOKED_DATE == DateTime.Today && DateTime.Now.Hour <= Model.appointment.BOOKED_TIME.Value.Hour))
+        @if (Model.appointment.IsInterpreterReqd.GetValueOrDefault())
         {
-            <div class="col-md-4 text-center">
-                <a type="button" id="btnModify" class="btn btn-success" asp-page="AppModify" asp-route-refID=@Model.refID>Modify Appointment</a>
+            <div class="row mb-5 g-5">
+                <div class="row mb-2">
+                    <h2 class="text-center">A @Model.appointment.PrimaryLanguage interpreter is required for this appointment.</h2>
+                </div>
             </div>
-        } 
-        <div class="col-md-4 text-center">
-            <button type="button" id="btnCancel" class="btn btn-success">Go Back</button>
-        </div>        
-    </div> 
+            <br />
+            <br />
+        }    
+
+        @if (Model.appointment.ActiveAlerts)
+        {
+            <div class="row mb-5 g-5">
+                @foreach (var a in Model.alertsList)
+                {
+                    <div class="row mb-2">
+                        <h2 class="text-center redtext">Patient Alert: @a.AlertType - @a.Comments</h2>
+                    </div>
+                    <br />
+                }
+            </div>
+        }
+        <br />
+        <br />
+    
+        <div class="row mb-5 g-5">        
+            <div class="col-md-4 text-center">
+                <a type="button" id="btnLetters" class="btn btn-success" asp-page="ClinicLettersAndLists" asp-route-refID=@Model.refID>Print Letters/Clinic Lists</a>
+            </div>            
+            @if (Model.appointment.BOOKED_DATE > DateTime.Today || (Model.appointment.BOOKED_DATE == DateTime.Today && 
+                    DateTime.Now.TimeOfDay <= Model.appointment.BOOKED_TIME.Value.TimeOfDay))
+            {
+                <div class="col-md-4 text-center">
+                    <a type="button" id="btnModify" class="btn btn-success" asp-page="AppModify" asp-route-refID=@Model.refID>Modify Appointment</a>
+                </div>
+            }
+            else @*Disable the "modify" button if it's a past appointment*@
+            {
+                <div class="col-md-4 text-center">
+                    <button type="button" id="btnModify" class="btn btn-success" disabled="true">Modify Appointment</button>
+                </div>
+            }
+
+            <div class="col-md-4 text-center">
+                <button type="button" id="btnCancel" class="btn btn-success">Go Back</button>
+            </div>        
+        </div> 
     }
 </div>
 
 <script>
-
-    //document.getElementById("btnConfirm").addEventListener("click", Confirm);
+    
     document.getElementById("btnCancel").addEventListener("click", GoBack);
     document.onload(HideMenu());
-
-    function Confirm() 
-    {
-
-    }
-
+        
     function GoBack() 
     {
         //window.close();
@@ -112,6 +111,5 @@
     {
         document.getElementById("TopMenu").hidden = true;
     }
-        
 
 </script>
